--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,5 +1,11 @@
 name = "json-to-proto"
 compatibility_date = "2023-07-21"
 
-[pages]
-main = "dist"
+compatibility_date = "2025-04-01"
+
+[assets]
+directory = "./dist"
+
+[build]
+command = "npm run build"
+
