--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "pnpm vitest run"
   },
   "dependencies": {
     "@codemirror/lang-json": "^6.0.2",
@@ -17,6 +18,7 @@
     "@uiw/codemirror-themes": "^4.24.1",
     "@uiw/react-codemirror": "^4.24.1",
     "lucide-react": "^0.525.0",
+    "protobufjs": "^7.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-syntax-highlighter": "^15.6.1"
