--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@uiw/codemirror-themes": "^4.24.1",
     "@uiw/react-codemirror": "^4.24.1",
     "lucide-react": "^0.525.0",
+    "pluralize": "^8.0.0",
     "protobufjs": "^7.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/pluralize": "^0.0.33",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
